// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormFieldsAutoComplete Additional options merged in 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="autoComplete1"
    >
      Options
    </label>
    <div
      className="components-form-token-field"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      tabIndex="-1"
    >
      <label
        className="components-form-token-field__label"
        htmlFor="components-form-token-input-1"
      >
        Add item
      </label>
      <div
        className="caldera-field caldera-field-autocomplete components-form-token-field__input-container"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="components-form-token-field__token"
        >
          <span
            className="components-form-token-field__token-text"
            id="components-form-token-field__token-text-2"
          >
            <span
              className="screen-reader-text"
            >
              One (1 of 2)
            </span>
            <span
              aria-hidden="true"
            >
              One
            </span>
          </span>
          <button
            aria-describedby="components-form-token-field__token-text-2"
            aria-label="Remove item"
            className="components-button components-icon-button components-form-token-field__remove-token"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="dashicon dashicons-dismiss"
              focusable="false"
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
              />
            </svg>
          </button>
        </span>
        <span
          className="components-form-token-field__token"
        >
          <span
            className="components-form-token-field__token-text"
            id="components-form-token-field__token-text-3"
          >
            <span
              className="screen-reader-text"
            >
              Three (2 of 2)
            </span>
            <span
              aria-hidden="true"
            >
              Three
            </span>
          </span>
          <button
            aria-describedby="components-form-token-field__token-text-3"
            aria-label="Remove item"
            className="components-button components-icon-button components-form-token-field__remove-token"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="dashicon dashicons-dismiss"
              focusable="false"
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
              />
            </svg>
          </button>
        </span>
        <input
          aria-autocomplete="list"
          aria-describedby="components-form-token-suggestions-howto-1"
          aria-expanded={false}
          className="components-form-token-field__input"
          disabled={false}
          id="components-form-token-input-1"
          onBlur={[Function]}
          onChange={[Function]}
          role="combobox"
          size={1}
          type="text"
          value=""
        />
      </div>
      <div
        className="screen-reader-text"
        id="components-form-token-suggestions-howto-1"
      >
        Separate with commas
      </div>
    </div>
  </div>
  <p
    className="components-base-control__help"
    id="autoComplete1__help"
  >
    Help text
  </p>
</div>
`;

exports[`FormFieldsAutoComplete Matches snapshot 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="autoComplete1"
    >
      Options
    </label>
    <div
      className="components-form-token-field"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      tabIndex="-1"
    >
      <label
        className="components-form-token-field__label"
        htmlFor="components-form-token-input-0"
      >
        Add item
      </label>
      <div
        className="caldera-field caldera-field-autocomplete components-form-token-field__input-container"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="components-form-token-field__token"
        >
          <span
            className="components-form-token-field__token-text"
            id="components-form-token-field__token-text-0"
          >
            <span
              className="screen-reader-text"
            >
              One (1 of 2)
            </span>
            <span
              aria-hidden="true"
            >
              One
            </span>
          </span>
          <button
            aria-describedby="components-form-token-field__token-text-0"
            aria-label="Remove item"
            className="components-button components-icon-button components-form-token-field__remove-token"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="dashicon dashicons-dismiss"
              focusable="false"
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
              />
            </svg>
          </button>
        </span>
        <span
          className="components-form-token-field__token"
        >
          <span
            className="components-form-token-field__token-text"
            id="components-form-token-field__token-text-1"
          >
            <span
              className="screen-reader-text"
            >
              Three (2 of 2)
            </span>
            <span
              aria-hidden="true"
            >
              Three
            </span>
          </span>
          <button
            aria-describedby="components-form-token-field__token-text-1"
            aria-label="Remove item"
            className="components-button components-icon-button components-form-token-field__remove-token"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="dashicon dashicons-dismiss"
              focusable="false"
              height={20}
              role="img"
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
              />
            </svg>
          </button>
        </span>
        <input
          aria-autocomplete="list"
          aria-describedby="components-form-token-suggestions-howto-0"
          aria-expanded={false}
          className="components-form-token-field__input"
          disabled={false}
          id="components-form-token-input-0"
          onBlur={[Function]}
          onChange={[Function]}
          role="combobox"
          size={1}
          type="text"
          value=""
        />
      </div>
      <div
        className="screen-reader-text"
        id="components-form-token-suggestions-howto-0"
      >
        Separate with commas
      </div>
    </div>
  </div>
  <p
    className="components-base-control__help"
    id="autoComplete1__help"
  >
    Help text
  </p>
</div>
`;
